code/human_written_tests/WebAssembly/processed_control_flow_validation/test_if_111.wast
(assert_malformed
  (module quote "(func i32.const 0 if else $l end $l)")
  "mismatching label"
)